<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/poster_progress"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:id="@+id/show_poster"
                    android:layout_width="@dimen/detail_poster_width"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:minHeight="@dimen/detail_poster_height" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    tools:text="@string/show_title" />

                <TextView
                    android:id="@+id/show_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    style="@style/ShowDetail.ItemHeading"
                    tools:text="@string/show_status" />

                <TextView
                    android:id="@+id/show_network"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    style="@style/ShowDetail.ItemHeading"
                    tools:text="@string/show_network" />

                <TextView
                    android:id="@+id/show_seasons_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    style="@style/ShowDetail.ItemHeading"
                    tools:text="@string/show_seasons_info" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/horizontal_margin">

            <TextView
                android:id="@+id/show_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/show_info"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>